syntax = "proto3";

package refractedlabs.flowtrade;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "refractedlabs/flowtrade/flow.proto";
import "refractedlabs/flowtrade/params.proto";
import "refractedlabs/flowtrade/position.proto";

option go_package = "github.com/refractedlabs/flowtrade/x/flowtrade/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateFlow(MsgCreateFlow) returns (MsgCreateFlowResponse);
  rpc JoinFlow(MsgJoinFlow) returns (MsgJoinFlowResponse);
  rpc ExitFlow(MsgExitFlow) returns (MsgExitFlowResponse);
  rpc SetOperator(MsgSetOperator) returns (MsgSetOperatorResponse);
  rpc ClaimTokenIn(MsgClaimTokenIn) returns (MsgClaimTokenInResponse);
  rpc ClaimTokenOut(MsgClaimTokenOut) returns (MsgClaimTokenOutResponse);
  rpc StopFlow(MsgStopFlow) returns (MsgStopFlowResponse);
}
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1;
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}

message MsgCreateFlow {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  FlowCreationRequest request = 2 [(gogoproto.nullable) = false];
}

message MsgCreateFlowResponse {
  Flow flow = 1 [(gogoproto.nullable) = false];
}

message MsgJoinFlow {
  option (cosmos.msg.v1.signer) = "signer";

  uint64 flow = 1;
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
  string signer = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgJoinFlowResponse {
  Position position = 1 [(gogoproto.nullable) = false];
}

message MsgExitFlow {
  option (cosmos.msg.v1.signer) = "signer";

  uint64 flow = 1;
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
  string signer = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgExitFlowResponse {
  Position position = 1 [(gogoproto.nullable) = false];
}

message MsgSetOperator {
  option (cosmos.msg.v1.signer) = "owner";

  uint64 flow = 1;
  string owner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string operator = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgSetOperatorResponse {}

message MsgClaimTokenIn {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 flow = 2;
  string treasury_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgClaimTokenInResponse {
  cosmos.base.v1beta1.Coin claimed = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fee = 2 [(gogoproto.nullable) = false];
}

message MsgClaimTokenOut {
  option (cosmos.msg.v1.signer) = "signer";

  uint64 flow = 1;
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string signer = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgClaimTokenOutResponse {
  cosmos.base.v1beta1.Coin claimed = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fee = 2 [(gogoproto.nullable) = false];
}

message MsgStopFlow {
  option (cosmos.msg.v1.signer) = "creator";

  uint64 flow_id = 1;
  string creator = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgStopFlowResponse {}
